Cosmetic fixes for homepage banner logo.  Fix for background images behind video player.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -22,7 +22,9 @@ body.modal-open {
   width: 100%;
   height: 100%;
 }
-
+.vimeo-embed{
+  background:black;
+}
 .vimeo-embed > iframe {
   width: 100%;
   height: 100%;
